kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnunez
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curso-lab3-deployment
  namespace: cnunez
  labels:
    app: curso-lab3-stack
spec:
  replicas: 3
  selector:
    matchLabels:
      app: curso-lab3-stack
  template:
    metadata:
      labels:
        app: curso-lab3-stack
    spec:
      containers:
      - name: contenedor-curso-lab3
        image: cesarnez/curso-devops-lab3
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: curso-lab3-service
  namespace: cnunez
  labels:
    app: curso-lab3-stack
spec:
  selector:
     app: curso-lab3-stack
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curso-lab3-ingress
  namespace: cnunez
spec:
  ingressClassName: nginx
  rules:
  - host: lab3.devops.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: curso-lab3-service
            port:
              number: 80
